# c45

c45/: CMakeLists.txt  CsvParser.cpp  CsvParser.h  Data.cpp  Data.h  DatasetParser.cpp  DatasetParser.h  FileProcessor.cpp  FileProcessor.h  c45.sln  c45.vcxproj  c45.vcxproj.filters  data.csv  main.cpp
c45/data/: Data.cpp  Data.h  Dataset.cpp  Dataset.h  DatasetParser.cpp  DatasetParser.h
c45/decision_tree/: C45Tree.cpp  C45Tree.h
